--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "bootstrap": "3.3.7",
     "moment": "^2.20.1",
     "moments": "0.0.2",
     "vue": "^2.5.2",
